:sparkles: feat: Configurando o envio do email de confirmação

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL="file:./dev.db"
 API_BASE_URL="http://localhost:3333"
 WEB_BASE_URL="http://localhost:3000"
 PORT="3333"
+ENDERECO_GMAIL="seu-endereço-de-email"
+SENHA_DE_APP="sua-senha-de-app"
